--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-query-devtools": "^5.81.5",
     "axios": "^1.10.0",
+    "lodash": "^4.17.21",
     "mui-one-time-password-input": "^5.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
