integrate datatable in user list but not fixed error paginate

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "@hookform/resolvers": "^5.1.1",
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
+    "@mui/x-data-grid": "^8.8.0",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-query-devtools": "^5.81.5",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "mui-one-time-password-input": "^5.0.0",
     "react": "^19.1.0",
